--- a/test.yml
+++ b/test.yml
@@ -23,6 +23,7 @@
       delegate_to: "{{ controller_machine }}"
 
     - name: contents of file
+      run_once: true
       debug:
         msg: "{{ lookup('file', backup_manager_git_deploy_key_file['path']) }}"
       delegate_to: "{{ controller_machine }}"
